--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
   padding: 0px;
   margin: 0px;
+  max-width: 100em;
   background-color: rgb(242, 242, 242);
   display: flex;
   flex-direction: column;
